fixed overflow issue

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -40,6 +40,7 @@ section {
 .site-container {
   max-width: 1200px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 .nav {
